flexsdk/modules/asc/test/compiler/as3/Definitions/Packages/NamespacePackageErr.err

[Compiler] Error #1084: Syntax error: expecting identifier before package.
as3.Definitions.Packages.NamespacePackageErr.as, Ln 23, Col 11:
namespace package foo {}
..........^

[Compiler] Error #1086: Syntax error: expecting semicolon before leftbrace.
as3.Definitions.Packages.NamespacePackageErr.as, Ln 23, Col 23:
namespace package foo {}
......................^

[Compiler] Error #1084: Syntax error: expecting rightbrace before trace.
as3.Definitions.Packages.NamespacePackageErr.as, Ln 25, Col 1:
trace\( "FAILED: cannot give a package an attribute" \);
^

3 errors found
